# penitus

./: .gitignore  CHANGELOG.md  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  setup.py  tox.ini
src/penitus/: __init__.py  exceptions.py  main.py
